--- a/src/app/components/Select/index.css
+++ b/src/app/components/Select/index.css
@@ -3,7 +3,7 @@
     outline: none;
     padding: 5px;
     margin: 20px;
-    background-color:darkblue;
+    background-color:rgb(97, 218, 251);
     cursor: pointer;
     color: white;
   }
