--- a/src/app/components/ContentBox/index.css
+++ b/src/app/components/ContentBox/index.css
@@ -14,7 +14,7 @@
     top: 50%;
     transform: translate(0, -50%);
     height: 10px;
-    background-color:darkblue;
+    background-color:rgb(97, 218, 251);
     position: absolute;
     width: 100px;
   }
