--- a/src/app/components/Link/index.css
+++ b/src/app/components/Link/index.css
@@ -1,4 +1,4 @@
-.link, .link-footer {
+.App__link, .App__footer--link {
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -6,20 +6,16 @@
   color: black;
 }
 
-.link-footer {
-  justify-content: center;
-}
-
-.link:hover, .link-footer:hover {
+.App__link:hover, .App__footer--link:hover {
   color: gold;
 }
 
-.link-img {
+.App__link--img {
   width: 40px;
   height: 40px;
   border-radius: 100%;
 }
 
-.link-img:hover {
+.App__link--img:hover {
   filter: opacity(50%);
 }
