--- a/src/app/components/WorkExperience/index.css
+++ b/src/app/components/WorkExperience/index.css
@@ -8,6 +8,10 @@
   border-right: 1px solid black;
 }
 
+.App__third-container--border:last-child {
+  border-right: none;
+}
+
 .App__third-container--job-position {
   padding: 0;
   margin: 0;
