--- a/src/app/components/footer/index.css
+++ b/src/app/components/footer/index.css
@@ -1,3 +1,11 @@
+/*FOOTER */
+
+.App__footer {
+  align-content: center;
+  justify-items: center;
+  text-align: center;
+}
+
 .App__footer--link {
     justify-content: center;
   }
