--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,11 +1,3 @@
-main {
-  margin: 0 auto;
-}
-
-.align-center {
-  text-align: center;
-}
-
 .App {
   width: 1006px;
   /* height: 1384px; */
@@ -14,65 +6,19 @@ main {
   margin: 0 auto;
 }
 
-.App__header {
-  width: 100%;
-  margin: 0 auto;
-  padding-bottom: 200px;
-}
-
-.App__header--rectangle {
-  max-width: 1006px;
-  height: 61px;
-  background:rgb(97, 218, 251);
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.App__header--name-card {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
-  width: 586px;
-  height: 189px;
-  border: 4px solid #000000;
-  box-sizing: border-box;
-  margin-top: -20px;
-
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
-.App__header--title {
-  width: 359px;
-  height: 56px;
-  font-weight: bold;
-  font-size: 40px;
-  color: #000000;
+.align-center {
+  text-align: center;
 }
 
 .App__black-title {
   width: 248px;
   background: #000000;
-
   font-weight: bold;
   font-size: 24px;
   color: white;
   text-align: center;
   margin: 5px;
 }
-
-
-.App__first-container {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  padding: 10px;
-  margin: 20px 0;
-  gap: 20px;
-}
-
 
 .App__second-container,
 .App__third-container,
@@ -82,4 +28,18 @@ main {
   gap: 20px;
   padding: 10px;
   margin: 20px 0;
+}
+
+/* MAIN*/
+
+main {
+  margin: 0 auto;
+}
+
+.App__first-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  padding: 10px;
+  margin: 20px 0;
+  gap: 20px;
 }
